--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pC.jpg" alt="" />
+										<img src="images/PC.jpg" alt="" />
 									</span>
 									<a href="PathofCommons.html">
 										<h2>Path of Commons</h2>
