--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 									<span class="image">
 										<img src="images/P.jpg" alt="" />
 									</span>
-									<a href="Photograph.html">
+									<a href="photograph.html">
 										<h2>Photography</h2>
 										<div class="content">
 											<!-- <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p> -->
@@ -122,7 +122,7 @@
 									<span class="image">
 										<img src="images/WC.jpg" alt="" />
 									</span>
-									<a href="Watercolor.html">
+									<a href="watercolor.html">
 										<h2>Watercolor</h2>
 										<div class="content">
 											<!-- <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p> -->
