--- a/photograph.html
+++ b/photograph.html
@@ -54,27 +54,27 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Photograph</h1>
-							<span class="image main"><img src="images/Photograph/1.jpg" alt="" /></span>
+							<span class="image main"><img src="images/photograph/1.jpg" alt="" /></span>
 
 							<p>Ping'he Packing Factory, Wuhan, 2019</p>
 
-							<span class="image main"><img src="images/Photograph/2.jpg" alt="" /></span>
+							<span class="image main"><img src="images/photograph/2.jpg" alt="" /></span>
 
 							<p>Ping'he Packing Factory, Wuhan, 2019</p>
 
-							<span class="image main"><img src="images/Photograph/3.jpg" alt="" /></span>
+							<span class="image main"><img src="images/photograph/3.jpg" alt="" /></span>
 
 							<p>Wuhan Art Museum, Wuhan, 2019</p>
 
-							<span class="image main"><img src="images/Photograph/4.jpg" alt="" /></span>
+							<span class="image main"><img src="images/photograph/4.jpg" alt="" /></span>
 
 							<p>Ping'an Building, Wuhan, 2019</p>
 
-							<span class="image main"><img src="images/Photograph/5.jpg" alt="" /></span>
+							<span class="image main"><img src="images/photograph/5.jpg" alt="" /></span>
 
 							<p>Sha'hu Park, Wuhan, 2019</p>
 
-							<span class="image main"><img src="images/Photograph/6.jpg" alt="" /></span>
+							<span class="image main"><img src="images/photograph/6.jpg" alt="" /></span>
 
 							<p>Yun'yu Bridge, Wuhan, 2019</p>
 
